sys/c-include/quickjs/quickjs.h

typedef struct JSContext JSContext;
/* JSValue consistency : it is not possible to run the code in this
  mode, but it is useful to detect simple reference counting
  errors. It would be interesting to modify a static C analyzer to
  handle specific annotations (clang has such annotations but only
  for objective C) */
typedef struct __JSValue* JSValue;
typedef const struct __JSValue* JSValueConst;
typedef uint64_t JSValue;
typedef union JSValueUnion {
  int32_t int32;
  double float64;
  void* ptr;
} JSValueUnion;
typedef struct JSValue {
  JSValueUnion u;
  int64_t tag;
} JSValue;
typedef JSValue JSCFunction(JSContext *ctx, JSValueConst this_val, int argc, JSValueConst *argv);
enum {
  __JS_ATOM_NULL = JS_ATOM_NULL,
#define DEF(name, str) JS_ATOM_ ## name,
#include "quickjs/quickjs-atom.h"
#undef DEF
  JS_ATOM_END,
};
typedef struct JSModuleDef JSModuleDef;
typedef union JSCFunctionType {
  JSCFunction* generic;
  JSValue (*generic_magic)(JSContext* ctx, JSValueConst this_val, int argc, JSValueConst* argv, int magic);
  JSCFunction* constructor;
  JSValue (*constructor_magic)(JSContext* ctx, JSValueConst new_target, int argc, JSValueConst* argv, int magic);
  JSCFunction* constructor_or_func;
  double (*f_f)(double);
  double (*f_f_f)(double, double);
  JSValue (*getter)(JSContext* ctx, JSValueConst this_val);
  JSValue (*setter)(JSContext* ctx, JSValueConst this_val, JSValueConst val);
  JSValue (*getter_magic)(JSContext* ctx, JSValueConst this_val, int magic);
  JSValue (*setter_magic)(JSContext* ctx, JSValueConst this_val, JSValueConst val, int magic);
  JSValue (*iterator_next)(JSContext* ctx, JSValueConst this_val, int argc, JSValueConst* argv, int* pdone, int magic);
} JSCFunctionType;
/* C property definition */

typedef struct JSCFunctionListEntry {
  const char* name;
  uint8_t prop_flags;
  uint8_t def_type;
  int16_t magic;
  union {
    struct {
      uint8_t length; /* XXX: should move outside union */
      uint8_t cproto; /* XXX: should move outside union */
      JSCFunctionType cfunc;
    } func;
    struct {
      JSCFunctionType get;
      JSCFunctionType set;
    } getset;
    struct {
      const char* name;
      int base;
    } alias;
    struct {
      const struct JSCFunctionListEntry* tab;
      int len;
    } prop_list;
    const char* str;
    int32_t i32;
    int64_t i64;
    double f64;
  } u;
} JSCFunctionListEntry;
void JS_SetPropertyFunctionList(JSContext* ctx, JSValueConst obj, const JSCFunctionListEntry* tab, int len);
/* C module definition */

typedef int JSModuleInitFunc(JSContext *ctx, JSModuleDef *m);
JSModuleDef* JS_NewCModule(JSContext* ctx, const char* name_str, JSModuleInitFunc* func);
/* can only be called before the module is instantiated */
int JS_AddModuleExport(JSContext* ctx, JSModuleDef* m, const char* name_str);
int JS_AddModuleExportList(JSContext* ctx, JSModuleDef* m, const JSCFunctionListEntry* tab, int len);
/* can only be called after the module is instantiated */
int JS_SetModuleExport(JSContext* ctx, JSModuleDef* m, const char* export_name, JSValue val);
int JS_SetModuleExportList(JSContext* ctx, JSModuleDef* m, const JSCFunctionListEntry* tab, int len);