sys/src/bindings/i686-unknown-linux-gnu.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of JSCFunctionListEntry__bindgen_ty_1__bindgen_ty_1"]
        [::std::mem::size_of::<JSCFunctionListEntry__bindgen_ty_1__bindgen_ty_1>() - 8usize];
    ["Alignment of JSCFunctionListEntry__bindgen_ty_1__bindgen_ty_1"]
        [::std::mem::align_of::<JSCFunctionListEntry__bindgen_ty_1__bindgen_ty_1>() - 4usize];
    ["Offset of field: JSCFunctionListEntry__bindgen_ty_1__bindgen_ty_1::length"]
        [::std::mem::offset_of!(JSCFunctionListEntry__bindgen_ty_1__bindgen_ty_1, length) - 0usize];
    ["Offset of field: JSCFunctionListEntry__bindgen_ty_1__bindgen_ty_1::cproto"]
        [::std::mem::offset_of!(JSCFunctionListEntry__bindgen_ty_1__bindgen_ty_1, cproto) - 1usize];
    ["Offset of field: JSCFunctionListEntry__bindgen_ty_1__bindgen_ty_1::cfunc"]
        [::std::mem::offset_of!(JSCFunctionListEntry__bindgen_ty_1__bindgen_ty_1, cfunc) - 4usize];
};
#[repr(C)]
#[derive(Copy, Clone)]
pub struct JSCFunctionListEntry__bindgen_ty_1__bindgen_ty_2 {
    pub get: JSCFunctionType,
    pub set: JSCFunctionType,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of JSCFunctionListEntry__bindgen_ty_1__bindgen_ty_2"]
        [::std::mem::size_of::<JSCFunctionListEntry__bindgen_ty_1__bindgen_ty_2>() - 8usize];
    ["Alignment of JSCFunctionListEntry__bindgen_ty_1__bindgen_ty_2"]
        [::std::mem::align_of::<JSCFunctionListEntry__bindgen_ty_1__bindgen_ty_2>() - 4usize];
    ["Offset of field: JSCFunctionListEntry__bindgen_ty_1__bindgen_ty_2::get"]
        [::std::mem::offset_of!(JSCFunctionListEntry__bindgen_ty_1__bindgen_ty_2, get) - 0usize];
    ["Offset of field: JSCFunctionListEntry__bindgen_ty_1__bindgen_ty_2::set"]
        [::std::mem::offset_of!(JSCFunctionListEntry__bindgen_ty_1__bindgen_ty_2, set) - 4usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JSCFunctionListEntry__bindgen_ty_1__bindgen_ty_3 {
    pub name: *const ::std::os::raw::c_char,
    pub base: ::std::os::raw::c_int,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of JSCFunctionListEntry__bindgen_ty_1__bindgen_ty_3"]
        [::std::mem::size_of::<JSCFunctionListEntry__bindgen_ty_1__bindgen_ty_3>() - 8usize];
    ["Alignment of JSCFunctionListEntry__bindgen_ty_1__bindgen_ty_3"]
        [::std::mem::align_of::<JSCFunctionListEntry__bindgen_ty_1__bindgen_ty_3>() - 4usize];
    ["Offset of field: JSCFunctionListEntry__bindgen_ty_1__bindgen_ty_3::name"]
        [::std::mem::offset_of!(JSCFunctionListEntry__bindgen_ty_1__bindgen_ty_3, name) - 0usize];
    ["Offset of field: JSCFunctionListEntry__bindgen_ty_1__bindgen_ty_3::base"]
        [::std::mem::offset_of!(JSCFunctionListEntry__bindgen_ty_1__bindgen_ty_3, base) - 4usize];
};
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JSCFunctionListEntry__bindgen_ty_1__bindgen_ty_4 {
    pub tab: *const JSCFunctionListEntry,
    pub len: ::std::os::raw::c_int,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of JSCFunctionListEntry__bindgen_ty_1__bindgen_ty_4"]
        [::std::mem::size_of::<JSCFunctionListEntry__bindgen_ty_1__bindgen_ty_4>() - 8usize];
    ["Alignment of JSCFunctionListEntry__bindgen_ty_1__bindgen_ty_4"]
        [::std::mem::align_of::<JSCFunctionListEntry__bindgen_ty_1__bindgen_ty_4>() - 4usize];
    ["Offset of field: JSCFunctionListEntry__bindgen_ty_1__bindgen_ty_4::tab"]
        [::std::mem::offset_of!(JSCFunctionListEntry__bindgen_ty_1__bindgen_ty_4, tab) - 0usize];
    ["Offset of field: JSCFunctionListEntry__bindgen_ty_1__bindgen_ty_4::len"]
        [::std::mem::offset_of!(JSCFunctionListEntry__bindgen_ty_1__bindgen_ty_4, len) - 4usize];
};
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of JSCFunctionListEntry__bindgen_ty_1"]
        [::std::mem::size_of::<JSCFunctionListEntry__bindgen_ty_1>() - 8usize];
    ["Alignment of JSCFunctionListEntry__bindgen_ty_1"]
        [::std::mem::align_of::<JSCFunctionListEntry__bindgen_ty_1>() - 4usize];
    ["Offset of field: JSCFunctionListEntry__bindgen_ty_1::func"]
        [::std::mem::offset_of!(JSCFunctionListEntry__bindgen_ty_1, func) - 0usize];
    ["Offset of field: JSCFunctionListEntry__bindgen_ty_1::getset"]
        [::std::mem::offset_of!(JSCFunctionListEntry__bindgen_ty_1, getset) - 0usize];
    ["Offset of field: JSCFunctionListEntry__bindgen_ty_1::alias"]
        [::std::mem::offset_of!(JSCFunctionListEntry__bindgen_ty_1, alias) - 0usize];
    ["Offset of field: JSCFunctionListEntry__bindgen_ty_1::prop_list"]
        [::std::mem::offset_of!(JSCFunctionListEntry__bindgen_ty_1, prop_list) - 0usize];
    ["Offset of field: JSCFunctionListEntry__bindgen_ty_1::str_"]
        [::std::mem::offset_of!(JSCFunctionListEntry__bindgen_ty_1, str_) - 0usize];
    ["Offset of field: JSCFunctionListEntry__bindgen_ty_1::i32_"]
        [::std::mem::offset_of!(JSCFunctionListEntry__bindgen_ty_1, i32_) - 0usize];
    ["Offset of field: JSCFunctionListEntry__bindgen_ty_1::i64_"]
        [::std::mem::offset_of!(JSCFunctionListEntry__bindgen_ty_1, i64_) - 0usize];
    ["Offset of field: JSCFunctionListEntry__bindgen_ty_1::u64_"]
        [::std::mem::offset_of!(JSCFunctionListEntry__bindgen_ty_1, u64_) - 0usize];
    ["Offset of field: JSCFunctionListEntry__bindgen_ty_1::f64_"]
        [::std::mem::offset_of!(JSCFunctionListEntry__bindgen_ty_1, f64_) - 0usize];
};
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of JSCFunctionListEntry"][::std::mem::size_of::<JSCFunctionListEntry>() - 16usize];
    ["Alignment of JSCFunctionListEntry"][::std::mem::align_of::<JSCFunctionListEntry>() - 4usize];
    ["Offset of field: JSCFunctionListEntry::name"]
        [::std::mem::offset_of!(JSCFunctionListEntry, name) - 0usize];
    ["Offset of field: JSCFunctionListEntry::prop_flags"]
        [::std::mem::offset_of!(JSCFunctionListEntry, prop_flags) - 4usize];
    ["Offset of field: JSCFunctionListEntry::def_type"]
        [::std::mem::offset_of!(JSCFunctionListEntry, def_type) - 5usize];
    ["Offset of field: JSCFunctionListEntry::magic"]
        [::std::mem::offset_of!(JSCFunctionListEntry, magic) - 6usize];
    ["Offset of field: JSCFunctionListEntry::u"]
        [::std::mem::offset_of!(JSCFunctionListEntry, u) - 8usize];
};
unsafe extern "C" {
    pub fn JS_SetPropertyFunctionList(
        ctx: *mut JSContext,
        obj: JSValue,
        tab: *const JSCFunctionListEntry,
        len: ::std::os::raw::c_int,
    );
}
pub type JSModuleInitFunc = ::std::option::Option<
    unsafe extern "C" fn(ctx: *mut JSContext, m: *mut JSModuleDef) -> ::std::os::raw::c_int,
>;
unsafe extern "C" {
    pub fn JS_NewCModule(
        ctx: *mut JSContext,
        name_str: *const ::std::os::raw::c_char,
        func: JSModuleInitFunc,
    ) -> *mut JSModuleDef;
}
unsafe extern "C" {
    pub fn JS_AddModuleExport(
        ctx: *mut JSContext,
        m: *mut JSModuleDef,
        name_str: *const ::std::os::raw::c_char,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn JS_AddModuleExportList(
        ctx: *mut JSContext,
        m: *mut JSModuleDef,
        tab: *const JSCFunctionListEntry,
        len: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn JS_SetModuleExport(
        ctx: *mut JSContext,
        m: *mut JSModuleDef,
        export_name: *const ::std::os::raw::c_char,
        val: JSValue,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn JS_SetModuleExportList(
        ctx: *mut JSContext,
        m: *mut JSModuleDef,
        tab: *const JSCFunctionListEntry,
        len: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn JS_GetVersion() -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn js_std_cmd(cmd: ::std::os::raw::c_int, ...) -> usize;
}
